force-app/main/default/objects/sc_ext__Triggered_Alert__c/sc_ext__Triggered_Alert__c.object-meta.xml
<CustomObject>
    <label>Own Triggered Alert</label>
    <nameField>
        <displayFormat>TAlert-{00000000}</displayFormat>
        <label>Own Triggered Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Own Triggered Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>