force-app/main/default/objects/sc_ext__Triggered_Alert__c/fields/sc_ext__Alert_Trigger_Value__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Alert_Trigger_Value__c</fullName>
    <label>Alert Trigger Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>