force-app/main/default/objects/sc_ext__Triggered_Alert__c/fields/sc_ext__Message_Body__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Message_Body__c</fullName>
    <label>Message Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>