force-app/main/default/objects/sc_ext__Triggered_Alert__c/fields/sc_ext__RevCult_Alert__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__RevCult_Alert__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Own Alert</label>
    <referenceTo>sc_ext__Alert__c</referenceTo>
    <relationshipLabel>Own Triggered Alerts</relationshipLabel>
    <relationshipName>RevCult_Triggered_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>