force-app/main/default/objects/sc_ext__Triggered_Alert__c/fields/sc_ext__RevCult_Alert_Config__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__RevCult_Alert_Config__c</fullName>
    <label>Own_Alert_Config</label>
    <length>255</length>
    <type>Text</type>
</CustomField>