force-app/main/default/objects/sc_ext__Triggered_Alert__c/fields/sc_ext__Subscriber_Type__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Subscriber_Type__c</fullName>
    <label>Subscriber Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>